# envoy-openssl

./: .bazelrc  BUILD  WORKSPACE  go.mod  log
bazel/: BUILD  add_OSSL_FUNCTION.patch  dependency_imports.bzl  envoy_binary.bzl  repositories.bzl  repositories_extra.bzl  repository_locations.bzl
bssl-compat/: BUILD  CMakeLists.txt
bssl-compat/cmake/: backup-openssl  boringssl.cmake  openssl.cmake
bssl-compat/prefixer/: CMakeLists.txt  prefixer  prefixer.cpp
bssl-compat/source/: AES.cc  ASN1_TIME_free.cc  BASIC_CONSTRAINTS_free.cc  BASIC_CONSTRAINTS_new.cc  BIO_f_buffer.cc  BIO_free.cc  BIO_mem_contents.cc  BIO_new.cc  BIO_new_bio_pair.cc  BIO_pending.cc  BIO_printf.cc  BIO_read_asn1.c  BIO_s_mem.cc  BIO_s_socket.cc  BN_bin2bn.cc  BN_bn2bin.cc  BN_bn2hex.cc  BN_bn2le_padded.cc  BN_init.cc  BN_num_bytes.cc  CRYPTO_BUFFER_free.c  CRYPTO_BUFFER_new.c  ECDSA_do_verify.cc  ECDSA_sign.cc  EVP_DigestInit.cc  EVP_MD_CTX_cleanup.cc  EVP_MD_CTX_init.cc  FIPS_mode.cc  MD5_Final.cc  MD5_Init.cc  MD5_Transform.cc  MD5_Update.cc  OpenSSL_version.cc  PEM_X509_INFO_read_bio.cc  PEM_read_bio_PUBKEY.cc  PEM_read_bio_PrivateKey.cc  PEM_read_bio_RSAPrivateKey.c  PEM_read_bio_X509.cc  PEM_read_bio_X509_AUX.cc  PEM_read_bio_X509_CRL.cc  (+81 more)
ci/: build_setup.sh  do_ci.sh  run_envoy_docker.sh
contrib/: all_contrib_extensions.bzl
contrib/exe/: BUILD
contrib/qat/: BUILD
openssl/: run_envoy_docker.sh
source/common/http/: conn_manager_impl.cc
source/common/network/: connection_impl.cc  connection_impl.h  multi_connection_base_impl.cc  raw_buffer_socket.cc
source/exe/: BUILD
(+45 files in other folders)
